Estate Controller secured by bearer token

--- a/EstateManagement/appsettings.json
+++ b/EstateManagement/appsettings.json
@@ -1,9 +1,9 @@
 {
   "Logging": {
     "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
+      "Default": "Trace",
+      "Microsoft": "Trace",
+      "Microsoft.Hosting.Lifetime": "Trace"
     }
   },
   "EventStoreSettings": {
@@ -22,5 +22,9 @@
     "UseConnectionStringConfig": false,
     "SecurityService": "http://192.168.1.133:5001"
   },
+  "SecurityConfiguration": {
+    "ApiName": "estateManagement",
+    "Authority": "http://192.168.1.133:5001"
+  },
   "AllowedHosts": "*"
-  }
+}
