--- a/EstateManagement/appsettings.development.json
+++ b/EstateManagement/appsettings.development.json
@@ -7,14 +7,14 @@
     }
   },
   "EventStoreSettings": {
-    "ConnectionString": "ConnectTo=tcp://admin:changeit@127.0.0.1:1113;VerboseLogging=true;",
+    //"ConnectionString": "ConnectTo=tcp://admin:changeit@127.0.0.1:1113;VerboseLogging=true;",
     "ConnectionName": "Estate Management",
     "HttpPort": 2113,
     "START_PROJECTIONS": false,
     "ContinuousProjectionsFolder": ""
   },
   "ConnectionStrings": {
-    "ConnectionStringConfiguration": "server=localhost;database=ConnectionStringConfiguration;user id=sa;password=sp1ttal"
+    //"ConnectionStringConfiguration": "server=localhost;database=ConnectionStringConfiguration;user id=sa;password=sp1ttal"
   },
   "AppSettings": {
     "HandlerEventTypesToSilentlyHandle": {
