--- a/EstateManagement/appsettings.json
+++ b/EstateManagement/appsettings.json
@@ -7,14 +7,14 @@
     }
   },
   "EventStoreSettings": {
-    "ConnectionString": "ConnectTo=tcp://admin:changeit@192.168.1.132:1113;VerboseLogging=true;",
+    "ConnectionString": "ConnectTo=tcp://admin:changeit@192.168.1.133:1113;VerboseLogging=true;",
     "ConnectionName": "Estate Management",
     "HttpPort": 2113,
     "START_PROJECTIONS": false,
     "ContinuousProjectionsFolder": ""
   },
   "ConnectionStrings": {
-    "ConnectionStringConfiguration": "server=localhost;database=ConnectionStringConfiguration;user id=sa;password=sp1ttal"
+    //"ConnectionStringConfiguration": "server=192.168.1.133;database=ConnectionStringConfiguration;user id=sa;password=Sc0tland"
   },
   "AppSettings": {
     "HandlerEventTypesToSilentlyHandle": {
