Update Workflows to ubuntu-latest and change to Octopus Cloud

--- a/.github/workflows/createrelease.yml
+++ b/.github/workflows/createrelease.yml
@@ -10,7 +10,7 @@ jobs:
     env:
         ASPNETCORE_ENVIRONMENT: "Production"
 
-    runs-on: ubuntu-16.04
+    runs-on: ubuntu-latest
 
     steps:
     - uses: actions/checkout@v1
@@ -40,10 +40,7 @@ jobs:
         
     - name: Build Docker Images 
       run: |
-        docker build . --file EstateManagement/Dockerfile --tag estatemanagement:latest --tag stuartferguson/estatemanagement:latest --tag stuartferguson/estatemanagement:${{ steps.get_version.outputs.VERSION }}         
-
-    - name: Run Integration Tests
-      run: dotnet test "EstateManagement.IntegrationTests\EstateManagement.IntegrationTests.csproj"
+        docker build . --file EstateManagement/Dockerfile --tag stuartferguson/estatemanagement:latest --tag stuartferguson/estatemanagement:${{ steps.get_version.outputs.VERSION }}
 
     - name: Publish Images to Docker Hub
       run: |
@@ -81,8 +78,8 @@ jobs:
     - name: Push Package to Octopus
       run: >-
         /opt/octo/Octo push
-        --server http://sferguson.ddns.net:9001
-        --apiKey API-UTN58QCF8HSATACNUBY41XPUC
+        --server ${{ secrets.OCTOPUS_URL }}
+        --apiKey ${{ secrets.OCTOPUS_APIKEY }}
         --package /home/runner/work/EstateManagement/EstateManagement/EstateManagement.${{ steps.get_version.outputs.VERSION }}.zip
         --overwrite-mode IgnoreIfExists
     
@@ -104,8 +101,8 @@ jobs:
     - name: Create & Deploy Release in Octopus
       run: >-
         /opt/octo/Octo create-release
-        --server http://sferguson.ddns.net:9001
-        --apiKey API-UTN58QCF8HSATACNUBY41XPUC
+        --server ${{ secrets.OCTOPUS_URL }}
+        --apiKey ${{ secrets.OCTOPUS_APIKEY }}
         --project "Estate Management"
         --version ${{ steps.get_version.outputs.VERSION }}
         --channel Default
