Changed Get Estate to come from Reporting RM

--- a/EstateManagement.Repository/EstateManagement.Repository.csproj
+++ b/EstateManagement.Repository/EstateManagement.Repository.csproj
@@ -8,4 +8,8 @@
     <PackageReference Include="EstateReporting.Database" Version="0.0.1.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\EstateManagement.Models\EstateManagement.Models.csproj" />
+  </ItemGroup>
+
 </Project>
