--- a/EstateManagement/appsettings.json
+++ b/EstateManagement/appsettings.json
@@ -14,7 +14,8 @@
     "ContinuousProjectionsFolder": ""
   },
   "ConnectionStrings": {
-    //"ConnectionStringConfiguration": "server=192.168.1.133;database=ConnectionStringConfiguration;user id=sa;password=Sc0tland"
+    "ConnectionStringConfiguration": "server=192.168.1.133;database=ConnectionStringConfiguration;user id=sa;password=Sc0tland",
+    "EstateReportingReadModel": "server=localhost;user id=sa;password=sp1ttal;database=EstateReportingReadModel"
   },
   "AppSettings": {
     "HandlerEventTypesToSilentlyHandle": {
