--- a/EstateManagement.IntegrationTests/EstateManagement.IntegrationTests.csproj
+++ b/EstateManagement.IntegrationTests/EstateManagement.IntegrationTests.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <PackageReference Include="ClientProxyBase" Version="0.0.11.3" />
     <PackageReference Include="Ductus.FluentDocker" Version="2.7.3" />
+    <PackageReference Include="EstateReporting.Database" Version="0.0.1.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.3.0" />
     <PackageReference Include="NLog" Version="4.6.8" />
