Operator List now returned by Get Estate

--- a/.github/workflows/createrelease.yml
+++ b/.github/workflows/createrelease.yml
@@ -37,7 +37,8 @@ jobs:
         dotnet test "EstateManagement.EstateAggregate.Tests\EstateManagement.EstateAggregate.Tests.csproj"
         dotnet test "EstateManagement.MerchantAggregate.Tests\EstateManagement.MerchantAggregate.Tests.csproj"
         dotnet test "EstateManagement.Tests\EstateManagement.Tests.csproj"
-        
+        dotnet test "EstateManagement.Repository.Tests\EstateManagement.Repository.Tests.csproj"
+
     - name: Build Docker Images 
       run: |
         docker build . --file EstateManagement/Dockerfile --tag stuartferguson/estatemanagement:latest --tag stuartferguson/estatemanagement:${{ steps.get_version.outputs.VERSION }}
