--- a/EstateManagement/appsettings.development.json
+++ b/EstateManagement/appsettings.development.json
@@ -14,7 +14,8 @@
     "ContinuousProjectionsFolder": ""
   },
   "ConnectionStrings": {
-    //"ConnectionStringConfiguration": "server=localhost;database=ConnectionStringConfiguration;user id=sa;password=sp1ttal"
+    //"ConnectionStringConfiguration": "server=localhost;database=ConnectionStringConfiguration;user id=sa;password=sp1ttal",
+    "EstateReportingReadModel": "server=localhost;user id=sa;password=sp1ttal;database=EstateReportingReadModel"
   },
   "AppSettings": {
     "HandlerEventTypesToSilentlyHandle": {
