--- a/EstateManagement.Testing/EstateManagement.Testing.csproj
+++ b/EstateManagement.Testing/EstateManagement.Testing.csproj
@@ -6,6 +6,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="EstateReporting.Database" Version="0.0.2.2" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\EstateManagement.BusinessLogic\EstateManagement.BusinessLogic.csproj" />
   </ItemGroup>
 
