Get Merchants for Estate added

--- a/EstateManagement/appsettings.json
+++ b/EstateManagement/appsettings.json
@@ -15,7 +15,7 @@
   },
   "ConnectionStrings": {
     "ConnectionStringConfiguration": "server=192.168.1.133;database=ConnectionStringConfiguration;user id=sa;password=Sc0tland",
-    "EstateReportingReadModel": "server=localhost;user id=sa;password=sp1ttal;database=EstateReportingReadModel"
+    "EstateReportingReadModel": "server=192.168.1.133;user id=sa;password=Sc0tland;database=EstateReportingReadModel"
   },
   "AppSettings": {
     "HandlerEventTypesToSilentlyHandle": {
