--- a/EstateManagement.IntegrationTests/EstateManagement.IntegrationTests.csproj
+++ b/EstateManagement.IntegrationTests/EstateManagement.IntegrationTests.csproj
@@ -7,16 +7,17 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="ClientProxyBase" Version="0.0.11.3" />
+    <PackageReference Include="ClientProxyBase" Version="0.0.14" />
     <PackageReference Include="Ductus.FluentDocker" Version="2.7.3" />
-    <PackageReference Include="EstateReporting.Database" Version="0.0.2.2" />
+    <PackageReference Include="EstateReporting.Database" Version="0.0.4.5" />
+    <PackageReference Include="EventStore.Client" Version="5.0.8" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.3" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.6.1" />
     <PackageReference Include="NLog" Version="4.7.0" />
     <PackageReference Include="NLog.Extensions.Logging" Version="1.6.2" />
-    <PackageReference Include="SecurityService.Client" Version="0.0.8.1" />
-    <PackageReference Include="Shared" Version="0.0.11.3" />
-    <PackageReference Include="Shared.IntegrationTesting" Version="0.0.11.3" />
+    <PackageReference Include="SecurityService.Client" Version="1.0.0" />
+    <PackageReference Include="Shared" Version="0.0.14" />
+    <PackageReference Include="Shared.IntegrationTesting" Version="0.0.14" />
     <PackageReference Include="Shouldly" Version="3.0.2" />
     <PackageReference Include="SpecFlow" Version="3.1.97" />
     <PackageReference Include="SpecFlow.Tools.MsBuild.Generation" Version="3.1.97" />
@@ -40,6 +41,9 @@
   <ItemGroup>
     <None Update="nlog.config">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="projections\continuous\MerchantBalanceCalculator.js">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
     </None>
   </ItemGroup>
 
