Upgrade to ES 20.06

--- a/EstateManagement/appsettings.development.json
+++ b/EstateManagement/appsettings.development.json
@@ -7,9 +7,10 @@
     }
   },
   "EventStoreSettings": {
-    //"ConnectionString": "ConnectTo=tcp://admin:changeit@127.0.0.1:1113;VerboseLogging=true;",
+    "ConnectionString": "https://192.168.1.133:2113",
     "ConnectionName": "Estate Management",
-    "HttpPort": 2113,
+    "UserName": "admin",
+    "Password": "changeit",
     "START_PROJECTIONS": false,
     "ContinuousProjectionsFolder": ""
   },
