--- a/EstateManagement/appsettings.development.json
+++ b/EstateManagement/appsettings.development.json
@@ -7,7 +7,7 @@
     }
   },
   "EventStoreSettings": {
-    "ConnectionString": "https://192.168.1.133:2113",
+    "ConnectionString": "https://localhost:2113",
     "ConnectionName": "Estate Management",
     "UserName": "admin",
     "Password": "changeit",
