--- a/EstateManagement.IntegrationTests/EstateManagement.IntegrationTests.csproj
+++ b/EstateManagement.IntegrationTests/EstateManagement.IntegrationTests.csproj
@@ -10,7 +10,7 @@
     <PackageReference Include="ClientProxyBase" Version="0.0.15.7" />
     <PackageReference Include="Ductus.FluentDocker" Version="2.7.3" />
     <PackageReference Include="EstateReporting.Database" Version="0.0.4.5" />
-    <PackageReference Include="EventStore.Client" Version="20.6.0" />
+    <PackageReference Include="EventStore.Client.Grpc.ProjectionManagement" Version="20.6.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.5" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.6.1" />
     <PackageReference Include="NLog" Version="4.7.2" />
