--- a/EstateManagement.Repository/EstateManagement.Repository.csproj
+++ b/EstateManagement.Repository/EstateManagement.Repository.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="EstateReporting.Database" Version="0.0.4.5" />
+    <PackageReference Include="EstateReporting.Database" Version="1.0.0-build7" />
   </ItemGroup>
 
   <ItemGroup>
