--- a/EstateManagement/appsettings.development.json
+++ b/EstateManagement/appsettings.development.json
@@ -16,7 +16,7 @@
   //},
   "ConnectionStrings": {
     //"ConnectionStringConfiguration": "server=localhost;database=ConnectionStringConfiguration;user id=sa;password=sp1ttal",
-    "EstateReportingReadModel": "server=localhost;user id=sa;password=sp1ttal;database=EstateReportingReadModel"
+    //"EstateReportingReadModel": "server=localhost;user id=sa;password=sp1ttal;database=EstateReportingReadModel"
   },
   "AppSettings": {
     "HandlerEventTypesToSilentlyHandle": {
