--- a/EstateManagement/appsettings.json
+++ b/EstateManagement/appsettings.json
@@ -16,7 +16,8 @@
   },
   "ConnectionStrings": {
     "ConnectionStringConfiguration": "server=192.168.1.133;database=ConnectionStringConfiguration;user id=sa;password=Sc0tland",
-    "EstateReportingReadModel": "server=192.168.1.133;user id=sa;password=Sc0tland;database=EstateReportingReadModel"
+    "EstateReportingReadModel": "server=192.168.1.133;user id=sa;password=Sc0tland;database=EstateReportingReadModel",
+    "HealthCheck": "server=192.168.1.133;user id=sa;password=Sc0tland;database=master"
   },
   "AppSettings": {
     "HandlerEventTypesToSilentlyHandle": {
@@ -28,5 +29,18 @@
     "ApiName": "estateManagement",
     "Authority": "http://192.168.1.133:5001"
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  //"HealthChecksUI": {
+  //  "HealthChecks": [
+  //    {
+  //      "Name": "Http and UI on single project",
+  //      "Uri": "http://localhost:5000/health",
+        
+        
+  //    }
+  //  ],
+  //  "Webhooks": [],
+  //  "EvaluationTimeinSeconds": 10,
+  //  "MinimumSecondsBetweenFailureNotifications": 60
+  //}
 }
