--- a/EstateManagement.BusinessLogic/EstateManagement.BusinessLogic.csproj
+++ b/EstateManagement.BusinessLogic/EstateManagement.BusinessLogic.csproj
@@ -1,13 +1,13 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+	  <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="SecurityService.Client" Version="1.0.1" />
-    <PackageReference Include="Shared.DomainDrivenDesign" Version="1.0.1" />
-    <PackageReference Include="MediatR" Version="8.0.1" />
+    <PackageReference Include="SecurityService.Client" Version="1.0.4" />
+    <PackageReference Include="Shared.DomainDrivenDesign" Version="1.0.3" />
+    <PackageReference Include="MediatR" Version="9.0.0" />
   </ItemGroup>
 
   <ItemGroup>
