--- a/EstateManagement.Contract.DomainEvents/EstateManagement.Contract.DomainEvents.csproj
+++ b/EstateManagement.Contract.DomainEvents/EstateManagement.Contract.DomainEvents.csproj
@@ -1,11 +1,11 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.1</TargetFramework>
+	  <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Shared.DomainDrivenDesign" Version="1.0.1" />
+    <PackageReference Include="Shared.DomainDrivenDesign" Version="1.0.3" />
   </ItemGroup>
 
 </Project>
