--- a/EstateManagement.ContractAggregate/EstateManagement.ContractAggregate.csproj
+++ b/EstateManagement.ContractAggregate/EstateManagement.ContractAggregate.csproj
@@ -1,12 +1,12 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+	  <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Shared.DomainDrivenDesign" Version="1.0.1" />
-	<PackageReference Include="Shared.EventStore" Version="1.0.1" />
+    <PackageReference Include="Shared.DomainDrivenDesign" Version="1.0.3" />
+	<PackageReference Include="Shared.EventStore" Version="1.0.3" />
   </ItemGroup>
 
   <ItemGroup>
