--- a/EstateManagement.IntegrationTests/EstateManagement - Backup.IntegrationTests.csproj
+++ b/EstateManagement.IntegrationTests/EstateManagement - Backup.IntegrationTests.csproj
@@ -7,23 +7,23 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="ClientProxyBase" Version="1.0.3" />
+    <PackageReference Include="ClientProxyBase" Version="1.0.1" />
     <PackageReference Include="Ductus.FluentDocker" Version="2.7.3" />
-    <PackageReference Include="EstateReporting.Database" Version="1.0.9" />
+    <PackageReference Include="EstateReporting.Database" Version="1.0.1.1-build12" />
     <PackageReference Include="EventStore.Client.Grpc.ProjectionManagement" Version="20.10.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.2" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.8.3" />
     <PackageReference Include="NLog" Version="4.7.6" />
     <PackageReference Include="NLog.Extensions.Logging" Version="1.7.0" />
-    <PackageReference Include="SecurityService.Client" Version="1.0.4" />
-    <PackageReference Include="Shared" Version="1.0.3" />
-    <PackageReference Include="Shared.IntegrationTesting" Version="1.0.3" />
+    <PackageReference Include="SecurityService.Client" Version="1.0.1" />
+    <PackageReference Include="Shared" Version="1.0.1" />
+    <PackageReference Include="Shared.IntegrationTesting" Version="1.0.1" />
     <PackageReference Include="Shouldly" Version="4.0.3" />
-    <PackageReference Include="SpecFlow" Version="3.5.14" />
-    <PackageReference Include="SpecFlow.Tools.MsBuild.Generation" Version="3.5.14" />
-    <PackageReference Include="SpecFlow.xUnit" Version="3.5.14" />
+    <PackageReference Include="SpecFlow" Version="3.3.30" />
+    <PackageReference Include="SpecFlow.Tools.MsBuild.Generation" Version="3.3.30" />
+    <PackageReference Include="SpecFlow.xUnit" Version="3.3.30" />
     <PackageReference Include="xunit" Version="2.4.1" />
-    <PackageReference Include="xunit.runner.visualstudio" Version="2.4.3">
+    <PackageReference Include="xunit.runner.visualstudio" Version="2.4.2">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
