--- a/EstateManagement.Models/EstateManagement.Models.csproj
+++ b/EstateManagement.Models/EstateManagement.Models.csproj
@@ -1,11 +1,11 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+	  <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="EstateReporting.Database" Version="1.0.1.1-build12" />
+    <PackageReference Include="EstateReporting.Database" Version="1.0.9" />
   </ItemGroup>
 
 </Project>
