--- a/EstateManagement.IntegrationTests/EstateManagement.IntegrationTests.csproj
+++ b/EstateManagement.IntegrationTests/EstateManagement.IntegrationTests.csproj
@@ -9,7 +9,7 @@
   <ItemGroup>
     <PackageReference Include="ClientProxyBase" Version="1.0.3" />
     <PackageReference Include="Ductus.FluentDocker" Version="2.7.3" />
-    <PackageReference Include="EstateReporting.Database" Version="1.0.9" />
+    <PackageReference Include="EstateReporting.Database" Version="1.0.10-build52" />
     <PackageReference Include="EventStore.Client.Grpc.ProjectionManagement" Version="20.10.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.2" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.8.3" />
