--- a/EstateManagement.IntegrationTests/EstateManagement.IntegrationTests.csproj
+++ b/EstateManagement.IntegrationTests/EstateManagement.IntegrationTests.csproj
@@ -7,17 +7,17 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="ClientProxyBase" Version="1.0.3" />
+    <PackageReference Include="ClientProxyBase" Version="1.0.3.1" />
     <PackageReference Include="Ductus.FluentDocker" Version="2.7.3" />
-    <PackageReference Include="EstateReporting.Database" Version="1.0.10-build52" />
+    <PackageReference Include="EstateReporting.Database" Version="1.0.11" />
     <PackageReference Include="EventStore.Client.Grpc.ProjectionManagement" Version="20.10.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.2" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.8.3" />
     <PackageReference Include="NLog" Version="4.7.6" />
     <PackageReference Include="NLog.Extensions.Logging" Version="1.7.0" />
-    <PackageReference Include="SecurityService.Client" Version="1.0.4.1" />
-    <PackageReference Include="Shared" Version="1.0.3" />
-    <PackageReference Include="Shared.IntegrationTesting" Version="1.0.3" />
+    <PackageReference Include="SecurityService.Client" Version="1.0.5" />
+    <PackageReference Include="Shared" Version="1.0.3.1" />
+    <PackageReference Include="Shared.IntegrationTesting" Version="1.0.3.1" />
     <PackageReference Include="Shouldly" Version="4.0.3" />
     <PackageReference Include="SpecFlow" Version="3.5.14" />
     <PackageReference Include="SpecFlow.Tools.MsBuild.Generation" Version="3.5.14" />
