--- a/EstateManagement/EstateManagement.csproj
+++ b/EstateManagement/EstateManagement.csproj
@@ -11,6 +11,8 @@
     <PackageReference Include="AspNetCore.HealthChecks.UI.Client" Version="5.0.1" />
     <PackageReference Include="AspNetCore.HealthChecks.UI.InMemory.Storage" Version="5.0.1" />
     <PackageReference Include="AspNetCore.HealthChecks.Uris" Version="5.0.1" />
+    <PackageReference Include="EventStore.Client.Grpc.PersistentSubscriptions" Version="20.10.0" />
+    <PackageReference Include="EventStore.Client.Grpc.ProjectionManagement" Version="20.10.0" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="5.0.2" />
     <PackageReference Include="Microsoft.AspNetCore.Diagnostics.HealthChecks" Version="2.2.0" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="5.0.2" />
