:| security user issue

--- a/EstateManagement/appsettings.development.json
+++ b/EstateManagement/appsettings.development.json
@@ -6,14 +6,14 @@
       "Microsoft.Hosting.Lifetime": "Trace"
     }
   },
-  //"EventStoreSettings": {
-  //  "ConnectionString": "https://localhost:2113",
-  //  "ConnectionName": "Estate Management",
-  //  "UserName": "admin",
-  //  "Password": "changeit",
-  //  "START_PROJECTIONS": false,
-  //  "ContinuousProjectionsFolder": ""
-  //},
+  "EventStoreSettings": {
+    "ConnectionString": "http://localhost:2113",
+    "ConnectionName": "Estate Management",
+    "UserName": "admin",
+    "Password": "changeit",
+    "START_PROJECTIONS": false,
+    "ContinuousProjectionsFolder": ""
+  },
   "ConnectionStrings": {
     //"ConnectionStringConfiguration": "server=localhost;database=ConnectionStringConfiguration;user id=sa;password=sp1ttal",
     //"EstateReportingReadModel": "server=localhost;user id=sa;password=sp1ttal;database=EstateReportingReadModel"
