--- a/.github/workflows/prereleasenuget.yml
+++ b/.github/workflows/prereleasenuget.yml
@@ -27,7 +27,7 @@ jobs:
 
     - name: 'Get Previous tag'
       id: previoustag
-      uses: "WyriHaximus/github-action-get-previous-tag@1.0.0"
+      uses: "WyriHaximus/github-action-get-previous-tag@v1.0.1"
 
     - name: 'Get next minor version'
       id: semvers
