--- a/.github/workflows/prereleasenuget.yml
+++ b/.github/workflows/prereleasenuget.yml
@@ -26,18 +26,22 @@ jobs:
       run: dotnet build EstateManagement.sln --configuration Release
 
     - name: 'Get Previous tag'
-      id: previoustag
-      uses: "WyriHaximus/github-action-get-previous-tag@v1.0.1"
-
-    - name: 'Get next minor version'
-      id: semvers
-      uses: "WyriHaximus/github-action-next-semvers@v1"
+    - uses: actions-ecosystem/action-get-latest-tag@v1
+      id: get-latest-tag
+      if: ${{ steps.release-label.outputs.level != null }}
       with:
-        version: ${{ steps.previoustag.outputs.tag }}
+          semver_only: true
+
+    - uses: actions-ecosystem/action-bump-semver@v1
+      id: bump-semver
+      if: ${{ steps.release-label.outputs.level != null }}
+      with:
+        current_version: ${{ steps.get-latest-tag.outputs.tag }}
+        level: ${{ steps.release-label.outputs.level }}
     
     - name: Print Version
       id: next_version
-      run: echo ::set-output name=VERSION::${{ steps.semvers.outputs.patch }}-build$GITHUB_RUN_NUMBER
+      run: echo ::set-output name=VERSION::${{ steps.bump-semver.outputs.new_version }}-build$GITHUB_RUN_NUMBER
         
     - name: Build and Publish Nuget Packages
       run: |
