--- a/.github/workflows/prereleasenuget.yml
+++ b/.github/workflows/prereleasenuget.yml
@@ -32,6 +32,7 @@ jobs:
       with:
           semver_only: true
 
+    - name: 'Bump Version'
     - uses: actions-ecosystem/action-bump-semver@v1
       id: bump-semver
       if: ${{ steps.release-label.outputs.level != null }}
