--- a/.github/workflows/prereleasenuget.yml
+++ b/.github/workflows/prereleasenuget.yml
@@ -26,15 +26,15 @@ jobs:
       run: dotnet build EstateManagement.sln --configuration Release
 
     - name: 'Get Previous tag'
-    - uses: actions-ecosystem/action-get-latest-tag@v1
       id: get-latest-tag
+      uses: actions-ecosystem/action-get-latest-tag@v1
       if: ${{ steps.release-label.outputs.level != null }}
       with:
           semver_only: true
 
     - name: 'Bump Version'
-    - uses: actions-ecosystem/action-bump-semver@v1
       id: bump-semver
+      uses: actions-ecosystem/action-bump-semver@v1
       if: ${{ steps.release-label.outputs.level != null }}
       with:
         current_version: ${{ steps.get-latest-tag.outputs.tag }}
