--- a/.github/workflows/prereleasenuget.yml
+++ b/.github/workflows/prereleasenuget.yml
@@ -36,7 +36,7 @@ jobs:
       uses: actions-ecosystem/action-bump-semver@v1
       with:
         current_version: ${{ steps.get-latest-tag.outputs.tag }}
-        level: ${{ steps.release-label.outputs.level }}
+        level: patch
     
     - name: Print Version
       id: next_version
