--- a/EstateManagement.Client/EstateManagement.Client.csproj
+++ b/EstateManagement.Client/EstateManagement.Client.csproj
@@ -1,13 +1,13 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-	  <TargetFramework>net5.0</TargetFramework>
+	  <TargetFrameworks>net5.0;netstandard2.0</TargetFrameworks>
     <TargetsForTfmSpecificBuildOutput>$(TargetsForTfmSpecificBuildOutput);IncludeP2PAssets</TargetsForTfmSpecificBuildOutput>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="ClientProxyBase" Version="1.0.3.3" />
+    <PackageReference Include="ClientProxyBase" Version="1.0.5" />
   </ItemGroup>
 
   <ItemGroup>
