Update to use HTTPS for security service

--- a/EstateManagement/appsettings.json
+++ b/EstateManagement/appsettings.json
@@ -23,11 +23,11 @@
     "HandlerEventTypesToSilentlyHandle": {
     },
     "UseConnectionStringConfig": false,
-    "SecurityService": "http://192.168.1.133:5001"
+    "SecurityService": "https://192.168.1.133:5001"
   },
   "SecurityConfiguration": {
     "ApiName": "estateManagement",
-    "Authority": "http://192.168.1.133:5001"
+    "Authority": "https://192.168.1.133:5001"
   },
   "AllowedHosts": "*",
   //"HealthChecksUI": {
