--- a/EstateManagement/Dockerfile
+++ b/EstateManagement/Dockerfile
@@ -13,6 +13,11 @@ COPY . .
 WORKDIR "/src/EstateManagement"
 RUN dotnet build "EstateManagement.csproj" -c Release -o /app/build
 
+# Sort out certificate stuff here
+RUN openssl x509 -inform DER -in /src/EstateManagement/aspnetapp-root-cert.cer -out /src/EstateManagement/aspnetapp-root-cert.crt
+RUN cp /src/EstateManagement/aspnetapp-root-cert.crt /usr/local/share/ca-certificates/
+RUN update-ca-certificates
+
 FROM build AS publish
 RUN dotnet publish "EstateManagement.csproj" -c Release -o /app/publish
 
