Using shared confguration

--- a/EstateManagement/appsettings.json
+++ b/EstateManagement/appsettings.json
@@ -1,46 +1,5 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Trace",
-      "Microsoft": "Trace",
-      "Microsoft.Hosting.Lifetime": "Trace"
-    }
-  },
-  "EventStoreSettings": {
-    "ConnectionString": "https://192.168.1.133:2113",
-    "ConnectionName": "Estate Management",
-    "UserName": "admin",
-    "Password": "changeit",
-    "START_PROJECTIONS": false,
-    "ContinuousProjectionsFolder": ""
-  },
-  "ConnectionStrings": {
-    "ConnectionStringConfiguration": "server=192.168.1.133;database=ConnectionStringConfiguration;user id=sa;password=Sc0tland",
-    "EstateReportingReadModel": "server=192.168.1.133;user id=sa;password=Sc0tland;database=EstateReportingReadModel",
-    "HealthCheck": "server=192.168.1.133;user id=sa;password=Sc0tland;database=master"
-  },
-  "AppSettings": {
-    "HandlerEventTypesToSilentlyHandle": {
-    },
-    "UseConnectionStringConfig": false,
-    "SecurityService": "https://192.168.1.133:5001"
-  },
   "SecurityConfiguration": {
-    "ApiName": "estateManagement",
-    "Authority": "https://192.168.1.133:5001"
-  },
-  "AllowedHosts": "*",
-  //"HealthChecksUI": {
-  //  "HealthChecks": [
-  //    {
-  //      "Name": "Http and UI on single project",
-  //      "Uri": "http://localhost:5000/health",
-        
-        
-  //    }
-  //  ],
-  //  "Webhooks": [],
-  //  "EvaluationTimeinSeconds": 10,
-  //  "MinimumSecondsBetweenFailureNotifications": 60
-  //}
+    "ApiName": "estateManagement"
+  }
 }
