--- a/EstateManagement/Dockerfilewindows
+++ b/EstateManagement/Dockerfilewindows
@@ -1,4 +1,4 @@
-FROM mcr.microsoft.com/dotnet/aspnet:5.0-windowsservercore-ltsc2019 AS base
+FROM stuartferguson/txnprocbasewindows AS base
 USER ContainerAdministrator
 WORKDIR /app
 
