--- a/.github/workflows/createrelease.yml
+++ b/.github/workflows/createrelease.yml
@@ -97,7 +97,7 @@ jobs:
         --project "Estate Management"
         --version ${{ steps.get_version.outputs.VERSION }}
         --channel Default
-        --deployTo Development
+        --deployTo Staging
         --waitfordeployment
         --deploymenttimeout 00:05:00
         --releasenotes "${{ steps.buildreleasenotes.outputs.releasenote }}" 
