Added automatic deposit processing

--- a/EstateManagement/appsettings.json
+++ b/EstateManagement/appsettings.json
@@ -1,4 +1,13 @@
 {
+  "AppSettings": {
+    "SubscriptionFilter": "Estate Management",
+    "UseInternalSubscriptionService": "true",
+    "EventHandlerConfiguration": {
+      "CallbackReceivedEnrichedEvent": [
+        "EstateManagement.BusinessLogic.EventHandling.MerchantDomainEventHandler,EstateManagement.BusinessLogic"
+      ]
+    }
+  },
   "SecurityConfiguration": {
     "ApiName": "estateManagement"
   }
