Updates for Specflow

--- a/EstateManagement/appsettings.json
+++ b/EstateManagement/appsettings.json
@@ -1,5 +1,6 @@
 {
   "AppSettings": {
+    "InternalSubscriptionServiceFilter": "Estate Management",
     "EventHandlerConfiguration": {
       "CallbackReceivedEnrichedEvent": [
         "EstateManagement.BusinessLogic.EventHandling.MerchantDomainEventHandler,EstateManagement.BusinessLogic"
