--- a/EstateManagement/appsettings.json
+++ b/EstateManagement/appsettings.json
@@ -4,7 +4,10 @@
     "EventHandlerConfiguration": {
       "CallbackReceivedEnrichedEvent": [
         "EstateManagement.BusinessLogic.EventHandling.MerchantDomainEventHandler,EstateManagement.BusinessLogic"
-      ]
+      ],
+      "TransactionHasBeenCompletedEvent": [
+        "EstateManagement.BusinessLogic.EventHandling.TransactionDomainEventHandler,EstateManagement.BusinessLogic"
+      ] 
     }
   },
   "SecurityConfiguration": {
