--- a/EstateManagement/appsettings.json
+++ b/EstateManagement/appsettings.json
@@ -7,7 +7,10 @@
       ],
       "TransactionHasBeenCompletedEvent": [
         "EstateManagement.BusinessLogic.EventHandling.TransactionDomainEventHandler,EstateManagement.BusinessLogic"
-      ] 
+      ],
+      "MerchantFeeSettledEvent": [
+        "EstateManagement.BusinessLogic.EventHandling.SettlementDomainEventHandler,EstateManagement.BusinessLogic"
+      ]
     }
   },
   "SecurityConfiguration": {
