Handle the next statement date

--- a/EstateManagement/appsettings.json
+++ b/EstateManagement/appsettings.json
@@ -10,6 +10,12 @@
       ],
       "MerchantFeeSettledEvent": [
         "EstateManagement.BusinessLogic.EventHandling.SettlementDomainEventHandler,EstateManagement.BusinessLogic"
+      ],
+      "MerchantBalanceChangedEvent": [
+        "EstateManagement.BusinessLogic.EventHandling.TransactionDomainEventHandler,EstateManagement.BusinessLogic"
+      ],
+      "MerchantBalanceChangedEvent1": [
+        "EstateManagement.BusinessLogic.EventHandling.TransactionDomainEventHandler,EstateManagement.BusinessLogic"
       ]
     }
   },
