--- a/EstateManagement/appsettings.json
+++ b/EstateManagement/appsettings.json
@@ -1,6 +1,8 @@
 {
   "AppSettings": {
     "InternalSubscriptionServiceFilter": "Estate Management",
+    "ClientId": "serviceClient",
+    "ClientSecret": "d192cbc46d834d0da90e8a9d50ded543",
     "EventHandlerConfiguration": {
       "CallbackReceivedEnrichedEvent": [
         "EstateManagement.BusinessLogic.EventHandling.MerchantDomainEventHandler,EstateManagement.BusinessLogic"
@@ -14,8 +16,8 @@
       "MerchantBalanceChangedEvent": [
         "EstateManagement.BusinessLogic.EventHandling.TransactionDomainEventHandler,EstateManagement.BusinessLogic"
       ],
-      "MerchantBalanceChangedEvent1": [
-        "EstateManagement.BusinessLogic.EventHandling.TransactionDomainEventHandler,EstateManagement.BusinessLogic"
+      "StatementGeneratedEvent": [
+        "EstateManagement.BusinessLogic.EventHandling.StatementDomainEventHandler,EstateManagement.BusinessLogic"
       ]
     }
   },
