--- a/EstateManagement.BusinessLogic.Tests/EstateManagement.BusinessLogic.Tests.csproj
+++ b/EstateManagement.BusinessLogic.Tests/EstateManagement.BusinessLogic.Tests.csproj
@@ -16,8 +16,9 @@
     <PackageReference Include="Shared.EventStore" Version="1.1.0" />
     <PackageReference Include="Shouldly" Version="4.0.3" />
     <PackageReference Include="xunit" Version="2.4.1" />
+    <PackageReference Include="System.IO.Abstractions.TestingHelpers" Version="13.2.9" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.3">
-      <PrivateAssets>all</PrivateAssets>
+	    <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
   </ItemGroup>
