Reject non positive merchant deposits

--- a/EstateManagement.MerchantAggregate/EstateManagement.MerchantAggregate.csproj
+++ b/EstateManagement.MerchantAggregate/EstateManagement.MerchantAggregate.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Shared" Version="1.1.1" />
     <PackageReference Include="Shared.EventStore" Version="1.1.0" />
   </ItemGroup>
 
