Update the release process

--- a/.github/workflows/createrelease.yml
+++ b/.github/workflows/createrelease.yml
@@ -35,20 +35,26 @@ jobs:
         dotnet test "EstateManagement.Tests\EstateManagement.Tests.csproj"
         dotnet test "EstateManagement.Repository.Tests\EstateManagement.Repository.Tests.csproj"
 
-    - name: Build Docker Images 
+    - name: Publish Images to Docker Hub - Pre Release
+      if: ${{ github.event.release.prerelease == true }} 
       run: |
-        docker build . --file EstateManagement/Dockerfile --tag stuartferguson/estatemanagement:latest --tag stuartferguson/estatemanagement:${{ steps.get_version.outputs.VERSION }}
+        docker build . --file EstateManagement/Dockerfile --tag stuartferguson/estatemanagement:dev
+        docker login --username=${{ secrets.DOCKER_USERNAME }} --password=${{ secrets.DOCKER_PASSWORD }}
+        docker push stuartferguson/estatemanagement:dev
 
-    - name: Publish Images to Docker Hub
+    - name: Publish Images to Docker Hub - Formal Release
+      if: ${{ github.event.release.prerelease == false }} 
       run: |
+        docker build . --file EstateManagement/Dockerfile --tag stuartferguson/estatemanagement:latest
         docker login --username=${{ secrets.DOCKER_USERNAME }} --password=${{ secrets.DOCKER_PASSWORD }}
         docker push stuartferguson/estatemanagement:latest
-        docker push stuartferguson/estatemanagement:${{ steps.get_version.outputs.VERSION }}
 
     - name: Publish API
+      if: ${{ github.event.release.prerelease == false }} 
       run: dotnet publish "EstateManagement\EstateManagement.csproj" --configuration Release --output publishOutput
 
     - name: Install Octopus CLI
+      if: ${{ github.event.release.prerelease == false }} 
       run: |
         sudo apt update && sudo apt install --no-install-recommends gnupg curl ca-certificates apt-transport-https && \
         curl -sSfL https://apt.octopus.com/public.key | sudo apt-key add - && \
@@ -56,6 +62,7 @@ jobs:
         sudo apt update && sudo apt install octopuscli
 
     - name: Pack Files for Octopus
+      if: ${{ github.event.release.prerelease == false }} 
       run: >-
         octo pack
         --outFolder /home/runner/work/EstateManagement/EstateManagement
@@ -67,6 +74,7 @@ jobs:
         --logLevel=verbose
 
     - name: Push Package to Octopus
+      if: ${{ github.event.release.prerelease == false }} 
       run: >-
         octo push
         --server ${{ secrets.OCTOPUS_URL }}
@@ -75,6 +83,7 @@ jobs:
         --overwrite-mode IgnoreIfExists
     
     - name: Get Release
+      if: ${{ github.event.release.prerelease == false }} 
       id: getrelease
       uses: octokit/request-action@v2.0.17
       with:
@@ -83,6 +92,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
     - name: Build Release Notes
+      if: ${{ github.event.release.prerelease == false }} 
       id: buildreleasenotes
       uses: gr2m/get-json-paths-action@v1.x
       with:
@@ -90,6 +100,7 @@ jobs:
           releasenote: "body"
     
     - name: Create & Deploy Release in Octopus
+      if: ${{ github.event.release.prerelease == false }} 
       run: >-
         octo  create-release
         --server ${{ secrets.OCTOPUS_URL }}
@@ -103,6 +114,7 @@ jobs:
         --releasenotes "${{ steps.buildreleasenotes.outputs.releasenote }}" 
         
     - name: Build and Publish Nuget Packages
+      if: ${{ github.event.release.prerelease == false }} 
       run: |
         dotnet pack "EstateManagement.Client\EstateManagement.Client.csproj" /p:PackageVersion=${{ steps.get_version.outputs.VERSION }} --output Nugets -c Release            
         dotnet nuget push Nugets/EstateManagement.Client.${{ steps.get_version.outputs.VERSION }}.nupkg --api-key ${{ secrets.MYGET_APIKEY }} --source https://www.myget.org/F/transactionprocessing/api/v2/package
