--- a/.github/workflows/buildwindowsimage.yml
+++ b/.github/workflows/buildwindowsimage.yml
@@ -19,12 +19,16 @@ jobs:
       id: get_version
       uses: battila7/get-version-action@v2
 
-    - name: Build Docker Images 
+    - name: Publish Images to Docker Hub - Pre Release
+      if: ${{ github.event.release.prerelease == true }} 
       run: |
-        docker build . --file EstateManagement/Dockerfilewindows --tag stuartferguson/estatemanagementwindows:latest --tag stuartferguson/estatemanagementwindows:${{ steps.get_version.outputs.version }}
-
-    - name: Publish Images to Docker Hub
-      run: |
+        docker build . --file EstateManagement/| --tag stuartferguson/estatemanagementwindows:dev
         docker login --username=${{ secrets.DOCKER_USERNAME }} --password=${{ secrets.DOCKER_PASSWORD }}
-        docker push stuartferguson/estatemanagementwindows:latest
-        docker push stuartferguson/estatemanagementwindows:${{ steps.get_version.outputs.version }}      
+        docker push stuartferguson/estatemanagement:dev
+
+    - name: Publish Images to Docker Hub - Formal Release
+      if: ${{ github.event.release.prerelease == false }} 
+      run: |
+        docker build . --file EstateManagement/| --tag stuartferguson/estatemanagementwindows:latest
+        docker login --username=${{ secrets.DOCKER_USERNAME }} --password=${{ secrets.DOCKER_PASSWORD }}
+        docker push stuartferguson/estatemanagement:latest
