--- a/.github/workflows/pushtomaster.yml
+++ b/.github/workflows/pushtomaster.yml
@@ -1,4 +1,4 @@
-name: Publish Pre-Release Nuget 
+name: Publish Pre-Release Nuget and Docker
 
 on:
   push:
@@ -8,7 +8,7 @@ on:
 
 jobs:
   build:
-    name: "Publish Pre-Release Nugets"
+    name: "Publish Pre-Release Nugets and Docker"
     env:
         ASPNETCORE_ENVIRONMENT: "Production"
 
@@ -54,3 +54,27 @@ jobs:
         dotnet nuget push Nugets/EstateManagement.Contract.DomainEvents.${{ steps.next_version.outputs.VERSION }}.nupkg --api-key ${{ secrets.MYGET_APIKEY }} --source https://www.myget.org/F/transactionprocessing/api/v2/package
         dotnet pack "EstateManagement.MerchantStatement.DomainEvents\EstateManagement.MerchantStatement.DomainEvents.csproj" /p:PackageVersion=${{ steps.next_version.outputs.VERSION }} --output Nugets -c Release
         dotnet nuget push Nugets/EstateManagement.MerchantStatement.DomainEvents.${{ steps.next_version.outputs.VERSION }}.nupkg --api-key ${{ secrets.MYGET_APIKEY }} --source https://www.myget.org/F/transactionprocessing/api/v2/package
+
+    - name: Publish Images to Docker Hub
+      run: |
+        docker build . --file EstateManagement/Dockerfile --tag stuartferguson/estatemanagement:master
+        docker login --username=${{ secrets.DOCKER_USERNAME }} --password=${{ secrets.DOCKER_PASSWORD }}
+        docker push stuartferguson/estatemanagement:master
+
+  buildwidows:
+    name: "Publish Pre-Release Docker for Windows"
+    env:
+        ASPNETCORE_ENVIRONMENT: "Production"
+
+    runs-on: windows-latest
+
+    steps:
+    - uses: actions/checkout@v2.3.4 
+      with:
+        fetch-depth: 0
+
+    - name: Publish Windows Images to Docker Hub
+      run: |
+        docker build . --file EstateManagement/Dockerfilewindows --tag stuartferguson/estatemanagementwindows:master
+        docker login --username=${{ secrets.DOCKER_USERNAME }} --password=${{ secrets.DOCKER_PASSWORD }}
+        docker push stuartferguson/estatemanagementwindows:master
